tests/errors/macro/macro_need_endif/two_if.c
#define name
#ifdef name	// отсутствует #endif для этой директивы
#ifndef name2
printf("name");
#endif

int main()
{
	return 0;
}
